---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert #(a, b, c) = #(1, 2, 3)\n  a + b + c\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert #(a, b, c) = #(1, 2, 3)
  a + b + c
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> integer().
go() ->
    {A, B, C} = {1, 2, 3},
    (A + B) + C.
